--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <div class="hero_inner">
                         <div class="content">
                             <span class="hello">Hello, I'm</span>
-                            <h3 class="name">Oussama</h3>
+                            <h3 class="name">Oussama <br> ABAKARIM</h3>
                             <div class="job">
                                 <span class="cd-headline rotate-1">
                                     <span class="blc">Creative</span>
@@ -169,7 +169,7 @@
                             <span class="three"><span class="in layer" data-depth="0.22"></span></span>
                             <span class="four"><span class="in layer" data-depth="0.26"></span></span>
                             <span class="five"><span class="in layer" data-depth="0.3"></span></span>
-                            <h3 class="stroke_text"><span class="">ABAKARIM</span></h3>
+                            <h3 class="stroke_text"><span class=""></span></h3>
                         </div>
                     </div>
                 </div>
